# RobotResearch

./: .gitignore  .~lock.scan.csv#  README.md  gen_csv.sh  setup.md  start_simulation.sh  start_turtlebot3.sh  test.txt  tmux.md
src/ROSLogger/: CMakeLists.txt  package.xml
src/ROSLogger/src/: ROSLogger.py
src/avoid_obstacle_control/: CMakeLists.txt  package.xml
src/avoid_obstacle_control/launch/: controllor.launch
src/avoid_obstacle_control/src/: scan.py
src/motion_stable_control/: CMakeLists.txt  package.xml
src/motion_stable_control/action/: Go2Goal.action
src/motion_stable_control/src/: .odom_subscriber.cpp.swp  Go2Goal.h  Go2GoalClient.cpp  Go2GoalClient.h  Go2GoalServer.cpp  Matrix.h  PyGo2GoalServer  odom_subscriber.cpp
src/random_controllor/: CMakeLists.txt  package.xml  setup.py
src/random_controllor/launch/: random_controllor.launch
src/random_controllor/nodes/: random_controllor
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/launch/: robot_navigation.launch
src/robot_navigation/src/: AvoidObstacleTwist.py  Constant.py  DirectionArrow.py  (+8 more)
src/ros_logger/: CMakeLists.txt  package.xml  setup.py
src/rqt_destination_clicker/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/set_goal_gui/: CMakeLists.txt  package.xml
src/set_goal_gui_rviz/: CMakeLists.txt  package.xml
src/set_goal_gui_rviz/launch/: set_goal_gui.launch
src/set_goal_gui_rviz/rviz/: set_goal_gui_rviz.rviz
src/set_goal_gui_rviz/src/: set_goal_gui_server.cpp
src/square_walk_control/: CMakeLists.txt  README.md  package.xml  setup.py
(+9 files in other folders)
