<?xml version="1.0"?>
<package>
  <name>set_goal_gui_rviz</name>
  <version>0.10.5</version>
  <description>The set_goal_gui_rviz package</description>

  <maintainer email="cycpe950609@gmail.com">Bruce Tsai</maintainer>

  <license>BSD</license>
 

  <author >David Gossow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>motion_stable_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
